--- a/public/dashboard/css/style.css
+++ b/public/dashboard/css/style.css
@@ -922,6 +922,11 @@ h1, h2, h3, h4, h5, h6 {
   background-color: transparent;
   color: red
 }
+.book_image_delete{
+    border:0px solid black;
+    background-color: transparent;
+    color: red
+}
 
 /*--------------------------------------------------------------
 # F.A.Q Page
